# MeshDistance

./: .gitmodules  CMakeLists.txt  GeometryProcessing.cpp  GeometryProcessing.h  Mesh.cpp  Mesh.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h  main.cpp
cmake_modules/: Findassimp.cmake
inputs/geosedic/fprint_matrix/: test.off
